# GainzChain

./: .gitignore  .travis.yml  CONTRIBUTING.md  GainzChain.Editor.Plugins.csproj  GainzChain.Editor.csproj  GainzChain.Plugins.csproj  GainzChain.csproj  GainzChain.sln  Gainzcoin.Editor.Plugins.csproj  Gainzcoin.Editor.csproj  Gainzcoin.Plugins.csproj  Gainzcoin.csproj  Gainzcoin.sln  INSTALL.md  InfiChunk_v1.unitypackage  Makefile.am  OVRPlayerController.cs  README.md  Voxel Tech 1.0.unitypackage  World.cs  configure.ac  libgainzcoinconsensus.pc.in  rename.py
Assets/OVR/Prefabs/: GearVrController.prefab
Assets/YounGen Tech/Voxel Tech/Materials/: Block Placement.mat
Assets/YounGen Tech/Voxel Tech/Materials/Blocks/: Grass 1.mat  Grass.mat  Stone.mat
Assets/YounGen Tech/Voxel Tech/Scenes/: Voxel Tech Scene - No Image Effects.unity
Assets/YounGen Tech/Voxel Tech/Scripts/: BlockRaycast.cs  BreakCursorLock.cs
Assets/YounGen Tech/Voxel Tech/Scripts/Math/: Direction.cs  MathHelper.cs  SimplexNoise.cs
Assets/YounGen Tech/Voxel Tech/Scripts/Movement/: VoxelCharacterController.cs
Assets/YounGen Tech/Voxel Tech/Scripts/World/: ChunkMeshObject.cs  ChunkObject.cs  (+2 more)
Unity/: Unity.Editor.Plugins.csproj  Unity.Editor.csproj  Unity.Plugins.csproj  Unity.csproj
Unity/ProjectSettings/: ProjectSettings.asset
build-aux/m4/: gainzcoin_find_bdb48.m4  gainzcoin_qt.m4  gainzcoin_subdir_to_include.m4
doc/man/: Makefile.am  gainzcoin-cli.1  gainzcoin-qt.1  gainzcoin-tx.1  gainzcoind.1
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.h  addrman.h  amount.h  arith_uint256.h  base58.cpp  base58.h  blockencodings.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.h  chainparamsseeds.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  cuckoocache.h  dbwrapper.cpp  dbwrapper.h  fs.h  gainzcoin-cli-res.rc  gainzcoin-cli.cpp  gainzcoin-tx-res.rc  gainzcoin-tx.cpp  gainzcoind-res.rc  gainzcoind.cpp  hash.h  httprpc.h  httpserver.cpp  httpserver.h  (+61 more)
src/bench/: .gitignore  bench.h  verify_script.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: params.h  validation.h
src/crypto/: aes.h  chacha20.h  common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/policy/: feerate.h  fees.h  policy.h  rbf.h
src/primitives/: block.h
src/qt/: Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  callback.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  gainzcoin.cpp  gainzcoin.qrc  gainzcoin_locale.qrc  gainzcoinaddressvalidator.cpp  gainzcoinaddressvalidator.h  gainzcoinamountfield.cpp  gainzcoinamountfield.h  gainzcoingui.cpp  gainzcoingui.h  gainzcoinstrings.cpp  gainzcoinunits.cpp  gainzcoinunits.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  modaloverlay.h  networkstyle.cpp  networkstyle.h  (+54 more)
src/qt/forms/: addressbookpage.ui  debugwindow.ui  helpmessagedialog.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: gainzcoin_af.ts  gainzcoin_af_ZA.ts  gainzcoin_ar.ts  gainzcoin_be_BY.ts  gainzcoin_bg.ts  gainzcoin_bg_BG.ts  gainzcoin_ca.ts  gainzcoin_ca@valencia.ts  gainzcoin_ca_ES.ts  gainzcoin_cs.ts  gainzcoin_cy.ts  gainzcoin_da.ts  gainzcoin_de.ts  gainzcoin_el.ts  gainzcoin_el_GR.ts  gainzcoin_en.ts  gainzcoin_en_GB.ts  gainzcoin_eo.ts  gainzcoin_es.ts  gainzcoin_es_AR.ts  gainzcoin_es_CL.ts  gainzcoin_es_CO.ts  gainzcoin_es_DO.ts  gainzcoin_es_ES.ts  gainzcoin_es_MX.ts  gainzcoin_es_UY.ts  gainzcoin_es_VE.ts  gainzcoin_et.ts  gainzcoin_et_EE.ts  gainzcoin_eu_ES.ts  gainzcoin_fa.ts  gainzcoin_fa_IR.ts  gainzcoin_fi.ts  gainzcoin_fr.ts  gainzcoin_fr_CA.ts  gainzcoin_fr_FR.ts  gainzcoin_gl.ts  gainzcoin_he.ts  gainzcoin_hi_IN.ts  gainzcoin_hr.ts  (+46 more)
src/qt/res/: gainzcoin-qt-res.rc
src/qt/test/: Makefile  compattests.cpp  compattests.h  paymentservertests.h  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h  wallettests.cpp  wallettests.h
src/rpc/: blockchain.cpp  blockchain.h  client.h  mining.cpp  mining.h  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  safemode.h  server.cpp  server.h  util.h
src/script/: gainzcoinconsensus.cpp  gainzcoinconsensus.h  interpreter.cpp  interpreter.h  ismine.h  script.h  script_error.h  sigcache.h  sign.h  standard.cpp  standard.h
src/support/: cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/test/: DoS_tests.cpp  Makefile  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bech32_tests.cpp  bip32_tests.cpp  blockchain_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  merkleblock_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  raii_event_tests.cpp  random_tests.cpp  (+26 more)
src/test/data/: README.md
src/wallet/: coincontrol.h  crypter.h  db.cpp  db.h  feebumper.h  fees.h  init.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.h  walletutil.h
src/wallet/test/: crypto_tests.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
test/util/: gainzcoin-util-test.py
(+37 files in other folders)
